test/vm/fails/erase_recursion_overflow.js

var test;

for(var i = 0; i < 102; ++i) {
	test = [test];
}

test = null;
